# generative-syn-bio

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: README.md
data/processed/: kosuri_contexts_labeled.csv
data/reference/: kosuri_rbs.csv
notebooks/: ablation_local_NVIDIA.ipynb  rbs_kosuri_correlation.ipynb  rbs_scoring_kosuri.ipynb
results/ablation/: ablation_scores_A1_AmtR.csv  ablation_summary_A1_AmtR.csv
results/rbs_kosuri_scoring/: rbs_kosuri_stats.csv
scripts/: analyze_rbs_correlation.py  build_kosuri_contexts.py  demo_validation.py  run_ablation.py  run_pipeline.py
src/: config.py
src/generation/: evo2_interface.py  types.py
src/parser/: cello_parser.py
src/schema/: part_spec.py
src/scoring/: scorer.py  types.py
src/validation/: validator.py
tests/: conftest.py  test_generation.py  test_parser.py  test_schema.py  test_scoring.py  test_validation.py
