[project]
name = "generative-syn-bio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "sbol3>=1.0",
    "biopython>=1.83",
    "ViennaRNA>=2.6",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pydantic>=2.5",
    "pytest>=8.0",
    "jupyter>=1.0",
    "huggingface_hub>=0.20",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "ipykernel",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
